--- a/style.css
+++ b/style.css
@@ -69,3 +69,29 @@ input
 .environment_li p{
     margin-top: 10px;
 }
+
+.headerbill{
+    line-height: 2;
+}
+.book{
+    cursor: pointer;
+    
+}
+
+.book hr{
+  margin-bottom:10px;  
+}
+.modal-content{
+    margin-top:100px;
+}
+.img_modal{
+    display: inline;
+}
+
+.p_modal{
+    margin-top:10px;
+}
+
+.modal-body{
+    text-align: center;
+}
